--- a/assets/presortie.css
+++ b/assets/presortie.css
@@ -19,6 +19,7 @@
     background-color: #4CAF50;
 }
 
+#poi-plugin-presortie .btn-hp-stat:focus,
 #poi-plugin-presortie .btn-hp-stat:hover {
     color: inherit;
 }
